--- a/Project/Properties/Resources.resx
+++ b/Project/Properties/Resources.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="paeto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\paeto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="faj;slkdf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>"..\Resources\faj;slkdf.png";System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="paeto" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\paeto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="138-1388270_transparent-user-png-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\138-1388270_transparent-user-png-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
